# fo-openai

./: README.md  __init__.py  _log.py  _pricing.py  engine.py  exemplars.py  fiftyone.yml  operators.py  pyproject.toml  tasks.py  utils.py
docs/: README.md
docs/architecture/: modules.md  overview.md  pipeline.md  structured-output.md
docs/development/: 2026-03-31-few-shot-exemplars-design.md  decisions.md  known-issues.md  testing.md
docs/operations/: configuration.md  cost-estimation.md  detection.md  exemplars.md  logging.md  tasks.md
