[project]
name = "fo-openai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fiftyone>=1.13.5",
    "litellm==1.82.6",  # pin for now due to supply chain attack
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
